--- a/geopandas_basics.html
+++ b/geopandas_basics.html
@@ -14565,7 +14565,7 @@ Output path is set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/
 <li>lrx = Lower Right x</li>
 <li>lry = Lower Right y</li>
 </ul>
-<p><img src="Figures_Jupyter/ROI_box.png" width="500"></p>
+<p><img src="figures/ROI_box.png" width="500"></p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
