--- a/geopandas_basics.html
+++ b/geopandas_basics.html
@@ -14259,7 +14259,7 @@ a.anchor-link {
 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="LBRAT2104---Working-with-GeoPandas">LBRAT2104 - Working with GeoPandas<a class="anchor-link" href="#LBRAT2104---Working-with-GeoPandas">&#182;</a></h1><p><code>GeoPandas</code> is an open source project to make working with geospatial data in python easier. <code>GeoPandas</code> extends the datatypes used by <code>Pandas</code> to allow spatial operations on geometric types.</p>
+<h1 id="GeoPandas---Basics">GeoPandas - Basics<a class="anchor-link" href="#GeoPandas---Basics">&#182;</a></h1><p><code>GeoPandas</code> is an open source project to make working with geospatial data in python easier. <code>GeoPandas</code> extends the datatypes used by <code>Pandas</code> to allow spatial operations on geometric types.</p>
 <p>More infos on : <a href="https://geopandas.org/">https://geopandas.org/</a></p>
 
 </div>
