--- a/in_situ_sampling_design.html
+++ b/in_situ_sampling_design.html
@@ -14571,7 +14571,8 @@ Output path are set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Sampling-Design">Sampling Design<a class="anchor-link" href="#Sampling-Design">&#182;</a></h2>
+<h2 id="Sampling-Design">Sampling Design<a class="anchor-link" href="#Sampling-Design">&#182;</a></h2><p><img src="figures/in_situ_sampling_design.png" width="500"></p>
+
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
