--- a/in_situ_sampling_design.html
+++ b/in_situ_sampling_design.html
@@ -14304,7 +14304,7 @@ a.anchor-link {
 
 <span class="c1"># When you are connected to your personnal computer</span>
 <span class="n">vector_path</span> <span class="o">=</span> <span class="s1">&#39;/Users/Nicolas/OneDrive - UCL/LBRAT2104/VECTOR/&#39;</span>
-<span class="n">raster_path</span> <span class="o">=</span> <span class="s1">&#39;/Volumes/nbdid-sst-lbrat2104/data/RASTER/&#39;</span>
+<span class="n">raster_path</span> <span class="o">=</span> <span class="s1">&#39;/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/&#39;</span>
 <span class="n">output_path</span> <span class="o">=</span> <span class="s1">&#39;/Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/&#39;</span>
 
 
@@ -14571,7 +14571,7 @@ Output path are set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Sampling-Design">Sampling Design<a class="anchor-link" href="#Sampling-Design">&#182;</a></h2><p><img src="figures/in_situ_sampling_design.png" width="500"></p>
+<h2 id="Sampling-Design">Sampling Design<a class="anchor-link" href="#Sampling-Design">&#182;</a></h2><p><img src="figures/in_situ_sampling_design.png" width="1000"></p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
@@ -14712,7 +14712,7 @@ Output path are set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/
 <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;-- Creating csv strategies&#39;</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;----&gt; </span><span class="si">{</span><span class="n">csv_strategies</span><span class="si">}</span><span class="s1">&#39;</span><span class="p">)</span>
 
-<span class="n">classes_strategy_all</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="n">csv_strategies</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+<span class="n">classes_strategy_all</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="n">csv_strategies</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">sep</span><span class="o">=</span><span class="s1">&#39;;&#39;</span><span class="p">)</span>
 </pre></div>
 
      </div>
@@ -14751,20 +14751,6 @@ Output path are set to       : /Users/Nicolas/OneDrive - UCL/LBRAT2104/Output/
 
 </div>
 
-</div>
-
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-     </div>
-</div>
-</div>
 </div>
 
 </div>
